--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
     "hardhat": "^2.9.3"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
+    "big.js": "^6.1.1",
+    "express": "^4.18.1",
+    "web3": "^1.7.3"
   }
 }
